After nearly 10 months, finally fix the layout in cases where the screen is too narrow for the header; now the initial theme is picked at random;

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
     color: black;
     background-color: #FFD662;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .headerContainer:hover {
